--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -2,7 +2,7 @@ name: learn-github-actions
 on: [push, pull_request]
 jobs:
   check-bats-version:
-    runs-on: macos-11.0
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
