updated github actions

--- a/.github/workflows/bstack-actions.yml
+++ b/.github/workflows/bstack-actions.yml
@@ -26,16 +26,14 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      
+      - name: 'Installing Dependencies'
+        run: mvn install
 
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
-
-      - name: 'Running test on BrowserStack'  # Invokes the actual test script that would run on BrowserStack browsers
-        run: mvn test -P single  # See sample test script above
+      - name: 'Running test on BrowserStack'
+        run: mvn test -P single
 
       - name: 'BrowserStackLocal Stop'  # Terminating the BrowserStackLocal tunnel connection
         uses: browserstack/github-actions/setup-local@master
         with:
           local-testing: stop
-
-      
