--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,8 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.3.0</version>
+            <version>7.4.0</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
@@ -39,7 +40,7 @@
         <dependency>
             <groupId>com.browserstack</groupId>
             <artifactId>browserstack-local-java</artifactId>
-            <version>0.1.0</version>
+            <version>1.0.6</version>
         </dependency>
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
