--- a/.github/workflows/bstack-actions.yml
+++ b/.github/workflows/bstack-actions.yml
@@ -28,6 +28,9 @@ jobs:
           java-version: 1.8
 
       - name: 'Running test on BrowserStack'
+        run: mvn clean
+
+      - name: 'Running test on BrowserStack'
         run: mvn install -P single
 
       - name: 'BrowserStackLocal Stop'
