--- a/.github/workflows/bstack-actions.yml
+++ b/.github/workflows/bstack-actions.yml
@@ -34,7 +34,8 @@ jobs:
         env:
           email:  ${{ secrets.BROWSERSTACK_DEMO_USERNAME }}
           password: ${{ secrets.BROWSERSTACK_DEMO_PASSWORD }}
-        run: echo ${{ secrets.BROWSERSTACK_DEMO_USERNAME }}
+        run: |
+          echo ${{ secrets.BROWSERSTACK_DEMO_USERNAME }}
 
       - name: 'BrowserStackLocal Stop'
         uses: browserstack/github-actions/setup-local@master
